r346 (29. 09. 2025):
Heat Street: Fixed a load crash with Restoration Mod installed

r345 (24. 09. 2025):
Buffs: Fixed a compatibility issue with WeaponLib causing Buff Reload and Interaction Reload to not work correctly

r344 (22. 09. 2025):
Added options for unlockable "Event Missions" in Side Jobs
Streamlined code for units that use MissionDoor class
Fixed an issue where sometimes -1 was returned when trying to determine a count of loot or snipers when playing on certain difficulties
Fixed an issue where after upgrading a drill/saw the timer in the tracker did not match in waypoint
Possible fix for 0s in Timer tracker and waypoint after upgrading a drill/saw
Golden Grin Casino: Fixed an issue where Colored Code tracker and waypoint does not hide after opening the vault
Player Ping Tracker: Increased tracker size a bit to improve readability
Player Ping Tracker: Fixed empty tracker when starting a heist alone in multiplayer
Player Ping Tracker: Fixed position sometimes not reflecting correctly
Scarface Mansion: Added trophy tracker for "Pelican Killer"
The White House: Fixed an issue where Assault tracker is visible in stealth after entering PEOC
Waypoints: Fixed an issue where Colored Code waypoints are not sometimes removed when they should be

r343 (17. 09. 2025):
Buffs: Fixed a possible crash when nil data are synced

r342 (16. 09. 2025):
Loot Counter: Fixed a load crash on endless heists

r341 (14. 09. 2025):
Player Ping Tracker: Updated tracker icon
Waypoints: Possible fix for crashes when waypoints are created

r340 (13. 09. 2025):
Brooklyn 10-10: Added achievement tracker for "Apartment Sniper"
End Game Stats: Fixed a crash after damaging a unit
Waypoints: Fixed a crash with Restoration Mod installed

r339 (12. 09. 2025):
Added menu options "Show Trackers in Preview" and "Show Buffs in Preview"

r338 (08. 09. 2025):
End Game Stats: Adjusted accuracy rounding to be on par with in-game accuracy rounding