@@ -1,10 +1,10 @@
 local EHI = EHI
 local SF = EHI.SpecialFunctions
 
-local other =
-{
-    [100107] = EHI.IsHost and EHI:AddAssaultDelay({ time = 15, trigger_once = true })
-}
+local other = {}
+if EHI.IsHost then
+    other[100107] = EHI:AddAssaultDelay({ time = 15, trigger_once = true })
+end
 if EHI:GetOptionAndLoadTracker("show_sniper_tracker") then
     other[100234] = { chance = 20, time = 10 + 10, on_fail_refresh_t = 10, id = "Snipers", class = EHI.Trackers.Sniper.Loop, single_sniper = true }
     other[100533] = { id = "Snipers", special_function = SF.CallCustomFunction, f = "OnChanceFail" }
